--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ img.avatar {
     height: 200px;
     padding: 3.7px;
     border: var(--primary-color) solid 4px;
+    margin-bottom: 30px;
 }
 
 h1 {
