--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ ul li a:hover {
     border-radius: 35px;
 }
 
-footer {
+/* footer {
     font-weight: 500;
     font-size: 12px;
     opacity: 0.6;
@@ -101,4 +101,13 @@ footer:hover {
 
 footer a {
     color: var(--text-color);
+} */
+
+@media screen and (min-width: 992px) {
+    .content {
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
 }
